--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -11,3 +11,7 @@
 @import "stock_card";
 @import "img_index";
 @import "tom_select";
+@import "animations";
+@import "empty_states";
+@import "loading";
+@import "unified_cards";
