--- a/app/views/meals/new.html.erb
+++ b/app/views/meals/new.html.erb
@@ -1,11 +1,6 @@
-<div class="td-match-page fade-in">
-  <div class="td-match-header">
-    <h1 class="td-page-title">
-      <i class="fas fa-utensils td-match-icon"></i>
-      <span class="td-match-ampersand">&</span>
-      <i class="fas fa-wine-glass-alt td-match-icon"></i>
-    </h1>
-    <p class="td-page-subtitle">Trouvez l'accord parfait</p>
+<%# === EN-TÊTE DE PAGE === %>
+  <div class="td-page-header">
+    <h1 class="td-page-title">Trouver l'accord parfait</h1>
   </div>
 
   <%= simple_form_for @meal, html: { class: "td-match-form" } do |f| %>
