--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,4 @@
-// Graphical variables
+// // Graphical variables
 @import "config/fonts";
 @import "config/colors";
 @import "config/design_system";
@@ -8,6 +8,6 @@
 @import "bootstrap";
 @import "font-awesome";
 
-// Your CSS partials
+// // Your CSS partials
 @import "components/index";
 @import "pages/index";
