--- a/backup_taste_drink_20251209_062859/app/views/pages/home.html.erb
+++ b/backup_taste_drink_20251209_062859/app/views/pages/home.html.erb
@@ -59,8 +59,8 @@
             <% rated_wines.each do |stock| %>
               <%= link_to drink_path(stock.drink), class: "td-wine-card" do %>
                 <div class="td-wine-card-image">
-                  <% if stock.drink.photo.attached? %>
-                    <%= image_tag stock.drink.photo, alt: stock.drink.name %>
+                  <% if stock.drink.photo.present? %>
+                    <%= image_tag stock.drink.photo, alt: stock.drink.title %>
                   <% else %>
                     <div class="td-wine-placeholder">
                       <i class="fas fa-wine-bottle"></i>
@@ -68,8 +68,7 @@
                   <% end %>
                 </div>
                 <div class="td-wine-card-content">
-                  <span class="td-wine-name"><%= truncate(stock.drink.name, length: 18) %></span>
-                  <span class="td-wine-type"><%= stock.drink.color %></span>
+                  <span class="td-wine-name"><%= truncate(stock.drink.title, length: 18) %></span>
                   <div class="td-wine-rating">
                     <%# Affiche les étoiles pleines %>
                     <% stock.rating.to_i.times do %>
