--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,9 +1,15 @@
 // Import Google fonts
 @import url('https://fonts.googleapis.com/css?family=Nunito:400,700|Work+Sans:400,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=GFS+Didot&family=Inter:wght@400;500;600;700&family=Montserrat:wght@400;700&display=swap');
 
 // Define fonts for body and headers
 $body-font: "Work Sans", "Helvetica", "sans-serif";
 $headers-font: "Nunito", "Helvetica", "sans-serif";
+// New font variables for Taste & Drink redesign
+$font-didot: "GFS Didot", "Didot", "Times New Roman", serif;
+$font-inter: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+$font-montserrat: "Montserrat", "Helvetica", "Arial", sans-serif;
+$font-montserrat-bold: "Montserrat", "Helvetica", "Arial", sans-serif;
 
 // To use a font file (.woff) uncomment following lines
 // @font-face {
