--- a/app/views/stocks/index.html.erb
+++ b/app/views/stocks/index.html.erb
@@ -1,7 +1,9 @@
 <div class="container">
-    <div class="td-home-header">
-      <h2 class="td-home-name">Ma Cave</h2>
-      <%= link_to "Add a new stock", new_stock_path, class: "btn btn-gold w-100 mt-3" %>
+    <div class="td-page-header">
+      <h1 class="td-page-title">Ma cave</h1>
+
+
+      <%= link_to "Ajouter à ma cave", new_stock_path, class: "btn btn-gold btn-montserrat w-100 mt-3" %>
     </div>
 
     <% @stocks.each do |stock| %>
